[gd_scene load_steps=3 format=3 uid="uid://ckplt1d6xc63p"]

[ext_resource type="Script" path="res://menus/techtree_editor.gd" id="1_4vpfs"]
[ext_resource type="PackedScene" uid="uid://dtu1fjgxhva0o" path="res://menus/technology_root.tscn" id="2_sscwm"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 94.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0953347
anchor_right = 1.0
anchor_bottom = -0.0020284
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Compile"

[node name="Button_2" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "Save"
icon_alignment = 1

[node name="Button_3" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "Load"
icon_alignment = 1

[node name="MenuButton" type="MenuButton" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Add Node"
item_count = 3
popup/item_0/text = "Root Node"
popup/item_0/id = 0
popup/item_1/text = "Entity Node"
popup/item_1/id = 1
popup/item_2/text = "Technology Node"
popup/item_2/id = 2

[node name="Techtree" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
right_disconnects = true
script = ExtResource("1_4vpfs")

[node name="TechnologyRoot" parent="Techtree" instance=ExtResource("2_sscwm")]
layout_mode = 1
anchor_left = 0.0921875
anchor_top = 0.330556
anchor_right = 0.296354
anchor_bottom = 0.560185
offset_top = 31.0718
offset_right = 80.833
offset_bottom = 101.887
mouse_filter = 1
position_offset = Vector2(177, 357)
overlay = 2

[connection signal="pressed" from="Panel/HBoxContainer/Button" to="Techtree" method="_on_compile_pressed"]
[connection signal="begin_node_move" from="Techtree" to="Techtree" method="_on_begin_node_move"]
[connection signal="connection_drag_ended" from="Techtree" to="Techtree" method="_on_connection_drag_ended"]
[connection signal="connection_drag_started" from="Techtree" to="Techtree" method="_on_connection_drag_started"]
[connection signal="connection_from_empty" from="Techtree" to="Techtree" method="_on_connection_from_empty"]
[connection signal="connection_request" from="Techtree" to="Techtree" method="_on_connection_request"]
[connection signal="connection_to_empty" from="Techtree" to="Techtree" method="_on_connection_to_empty"]
[connection signal="copy_nodes_request" from="Techtree" to="Techtree" method="_on_copy_nodes_request"]
[connection signal="delete_nodes_request" from="Techtree" to="Techtree" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="Techtree" to="Techtree" method="_on_disconnection_request"]
[connection signal="duplicate_nodes_request" from="Techtree" to="Techtree" method="_on_duplicate_nodes_request"]
[connection signal="end_node_move" from="Techtree" to="Techtree" method="_on_end_node_move"]
[connection signal="paste_nodes_request" from="Techtree" to="Techtree" method="_on_paste_nodes_request"]
